# RPi_Template_CrossCompile_C

HelloWorld/: readMe.md
HelloWorld/src/: CMakeLists.txt
